# financial_document_processor

./: .env.example  Dockerfile  HELP.md  LICENSE  README.md  README_pt_BR.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  setup.py
financial_document_processor/: config.py  main.py
financial_document_processor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
financial_document_processor/adapters/: kafka_consumer.py  kafka_producer.py
financial_document_processor/adapters/ai/: __init__.py  ai_provider.py  claude_provider.py  gemini_provider.py  openai_provider.py
financial_document_processor/adapters/database/: models.py  postgres.py  repository.py
financial_document_processor/domain/: category.py  document.py  transaction.py
financial_document_processor/services/: categorization.py  document_processor.py  file_decoder.py  prompt_engineering.py
financial_document_processor/services/parsers/: bank_statement.py  parser.py
financial_document_processor/utils/: logging.py  metrics.py  retry.py  validators.py
migrations/: README.md  env.py
migrations/versions/: 001_Initial.py
scripts/: db_migrate.py  db_reset.py  run_tests.py
tests/: README.md  conftest.py
tests/fixtures/: sample_bank_statement.txt
tests/integration/: test_document_flow.py  test_kafka.py  test_repository.py
tests/unit/: test_ai_provider.py  test_categorization.py  test_document_processor.py  test_file_decoder.py  test_prompt_engineering.py
